Updated by Łukasz Dąbrowski

--- a/programming/posts/11.lepsza_informatyka.md
+++ b/programming/posts/11.lepsza_informatyka.md
@@ -3,10 +3,10 @@
 
 ## W nawiązaniu do wspomnianego [postu na Twitterze](https://twitter.com/C4B_Lab/status/1400381495349481479 "Lepsza Informatyka"):
 
-### Zacznijmy od czegoś prostego, tj. ulepszenie FCU oraz BCU jako software'u komercyjnego !&nbsp;:heavy_check_mark:
+### Zacznijmy od czegoś prostego, tj. ulepszenia FCU oraz napisania BCU (PHP, C#, Java, [other languages]) jako software'u komercyjnego !&nbsp;:heavy_check_mark:
 
 #
-## Updated on 07-June-2021 2:42 PM GMT
+## Updated on 07-June-2021 3:13 PM GMT
 
 #
 ##### Go to [Programming](/programming/Programming.md#all-the-latest-about-my-programming-activities "All the latest about Lucas' software engineering") page
