Updated by Łukasz Dąbrowski

--- a/programming/posts/11.lepsza_informatyka.md
+++ b/programming/posts/11.lepsza_informatyka.md
@@ -7,7 +7,9 @@
  - ulepszenia FCU &nbsp;:heavy_check_mark:
  - napisania BCU (PHP, C#, Java, [other languages]) &nbsp;:heavy_check_mark:
 #
-## Updated on 07-June-2021 3:15 PM GMT
+##### Prawa autorskie do FCU oraz BCU oraz innych niezbędnych repozytoriów przekażę w stosowne ręce !
+#
+## Updated on 07-June-2021 3:24 PM GMT
 
 #
 ##### Go to [Programming](/programming/Programming.md#all-the-latest-about-my-programming-activities "All the latest about Lucas' software engineering") page
