Updated by Łukasz Dąbrowski

--- a/programming/posts/11.lepsza_informatyka.md
+++ b/programming/posts/11.lepsza_informatyka.md
@@ -9,7 +9,9 @@
 #
 ##### Prawa autorskie do FCU oraz BCU oraz innych niezbędnych repozytoriów przekażę w stosowne ręce !
 #
-## Updated on 07-June-2021 3:24 PM GMT
+##### Dotychczasowa zawartość FCU oraz BCU oraz innych niezbędnych repozytoriów pozostaje w trybie [MIT License](https://opensource.org/licenses/MIT "The MIT License") !
+#
+## Updated on 07-June-2021 3:58 PM GMT
 
 #
 ##### Go to [Programming](/programming/Programming.md#all-the-latest-about-my-programming-activities "All the latest about Lucas' software engineering") page
