--- a/programming/posts/12.ossi.md
+++ b/programming/posts/12.ossi.md
@@ -1,9 +1,9 @@
 # Open Source Solutions Initiative !
 
-### Whithin the next week or so, [C4B Solutions Open Source](https://twitter.com/C4B_Lab "C4B Solutions Open Source") will be converted to [Open Source Solutions Initiative](https://twitter.com/OSSI "Open Source Solutions Initiative").
+### Within the next week or so, [C4B Solutions Open Source](https://twitter.com/C4B_Lab "C4B Solutions Open Source") will be converted to [Open Source Solutions Initiative](https://twitter.com/OSSI_ "Open Source Solutions Initiative").
 
 #
-## Updated on 11-June-2021 2:10 PM GMT
+## Updated on 11-June-2021 2:18 PM GMT
 
 #
 ##### Go to [Programming](/programming/Programming.md#all-the-latest-about-my-programming-activities "All the latest about Lucas' software engineering") page
