--- a/programming/posts/10.current_contact_info.md
+++ b/programming/posts/10.current_contact_info.md
@@ -1,14 +1,14 @@
 # These are my valid contact informations
 
 
-## |&nbsp;&nbsp;[Current CV](https://www.dropbox.com/s/n0dwu3dfmcqootc/CV_%C5%81ukasz_D%C4%85browski.pdf?dl=0 "My up to date CV")&nbsp;&nbsp;|&nbsp;&nbsp;Current phone number:&nbsp;(+48) 666-929-020&nbsp;&nbsp;|
+## |&nbsp;&nbsp;[Current CV](https://1drv.ms/b/s!AkAwFGvHtN-RgWRRcsoHrGpXBIP5?e=MJOKDl "My up to date CV")&nbsp;&nbsp;|&nbsp;&nbsp;Current phone number:&nbsp;(+48) 666-929-020&nbsp;&nbsp;|
 
 ### You are free to call me and talk to me if you like !&nbsp;:heavy_check_mark:
 
 For how to call Poland please visit [this link](https://www.howtocallabroad.com/poland/ "Guideline on calling Poland").
 
 #
-## Updated on 12-November-2020 9:27 AM GMT
+## Updated on 24-October-2022 12:05 AM Local Time
 
 #
 ##### Go to [Programming](/programming/Programming.md#all-the-latest-about-my-programming-activities "All the latest about Lucas' software engineering") page
